--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -33,8 +33,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx",
-    "src/main.ts"
+    "tests/**/*.tsx"
   ],
   "exclude": [
     "node_modules"
